# TI301I-Project

./: .gitignore  CMakeLists.txt  Main_Project  Time_Measurements  main.c  sample_names.txt  search_durations.m  time_measurements.c  times.csv
headers/: appointments.h  cell.h  list.h  timer.h  utils.h
src/: appointments.c  cell.c  list.c  timer.c  utils.c
